# MPRGPSolver

./: .gitignore  CMakeLists.txt  log.txt  tempt_test_io.mat
doc/: MPRGP_LCP.tex  MPRGP_extention.tex
script/: log_analysis.py  report_data.tex  report_head.tex
src/: ActiveSetQP3D.h  FlexiblePCG.h  ICASolver.h  MPRGPPrecondition.h  MPRGPProjection.h  MPRGPSolver.h  MPRGPUtility.h  ProjectedGS.cpp  ProjectedGS.h
test_case/: main.cpp  test_ActiveSet3D.h  test_ICASolver.h  test_decoupled_mprgp.h  test_projection.h  test_simulation.h  test_solver.h  test_utility.h
test_case/data/: beam_ball_qp  dragon_asia_qp
