PROJECT(MPRGPSolver)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -DHAVE_NAMESPACES -ldl")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)

FIND_PACKAGE(Eigen3 REQUIRED)
IF(EIGEN3_FOUND)
  INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
ENDIF(EIGEN3_FOUND)

INCLUDE_DIRECTORIES(
  
  /usr/local/include
  ${PROJECT_SOURCE_DIR}/src
  )

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test_case)